fix padding on mobile

--- a/public_html/static/css/scss/responsive/_mobile.scss
+++ b/public_html/static/css/scss/responsive/_mobile.scss
@@ -12,7 +12,7 @@
 	.topTitle h3{font-size: 1.4em!important;}
 
 	#soreha a{
-		padding: 0 1rem 1rem;
+		padding: 0.5rem 1rem;
 	}
 	#soreha .c7 span{
 		display: inline-block;
