--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -6397,7 +6397,7 @@ body[data-sidebar="dada"].rtl #sidebar .menu {
     font-size: 1.4em !important; }
 
   #soreha a {
-    padding: 0 1rem 1rem; }
+    padding: 0.5rem 1rem; }
 
   #soreha .c7 span {
     display: inline-block; }
